--- a/Projects/Css/style2.css
+++ b/Projects/Css/style2.css
@@ -2,6 +2,17 @@
   margin: 0;
   padding: 0;
 }
+.image{
+  height: 90%;
+}
+.image img{
+  height: 90%;
+  object-fit: contain;
+}
+.image h1 a{
+  color: black;
+  text-decoration: none;
+}
 body {
   background-color: whitesmoke;
 }
@@ -157,8 +168,7 @@ ul {
 .carousel-item img {
   height: 350px;
 }
-.featured-items {
-}
+
 .featured-items h1 {
   text-align: center;
   padding-bottom: 15px;
@@ -178,18 +188,31 @@ ul {
   background-color: rgb(241, 241, 241);
   display: block;
   margin: auto;
-  height: 75%;
+  height: 80%;
   width: 21%;
-  padding: 15px 25px;
+  padding: 15px 20px;
   position: relative;
   border-radius: 20px;
   box-shadow: 1px 1px 7px -2px rgba(0, 0, 0, 0.66);
 }
-.item-card img {
-  height: 80px;
-  width: 80px;
+.feature-img{
+  width: 100%;
+  background-color: #333;
+  height: 90px;
+  justify-self: center;
+  border-radius: 8px;
 }
-.item-card button {
+.feature-img img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 8px;
+}
+.item-card h4{
+  margin-top: 10px;
+  font-size:130%;
+}
+.addcart{
   width: 90px;
   height: 35px;
   display:block;
@@ -355,6 +378,11 @@ footer h1 {
   text-align: center;
   margin-top: -25px;
   border: none;
+  
+}
+.user-lg a{
+  text-decoration: none;
+  color: white;
 }
 .user-reg{
   width: 140px;
@@ -415,5 +443,38 @@ footer h1 {
     width: 100%; 
     text-align: center;
     padding: 50px 0 ;
+  }
+
+  .item-display{
+    background-color: rgb(241, 241, 241);
+    margin-bottom: 40px;
+    padding: 15px 25px;
+    position: relative;
+    border-radius: 20px;
+    box-shadow: 1px 1px 7px -2px rgba(0, 0, 0, 0.66);
+  }
+  .item-display h1{
+    font-size:100%;
+    height: 55px;
+    margin: auto;
+  }
+  .item-image{
+    background-color: black;
+    height: 120px;
+    width: auto;
+    border-radius: 8px;
+  }
+  .item-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+  }
+  .copyright{
+    color: white;
+    display: block;
+    position: relative;
+    bottom: -60px;
+    text-align: center;
   }
 
