--- a/src/app/css/style.css
+++ b/src/app/css/style.css
@@ -14,3 +14,11 @@
 table {
   width: 100%;
 }
+
+#filter-box {
+  display: flex; 
+  flex-direction: row; 
+  justify-content: space-between; 
+  padding: 16px;
+  background-color: rgb(221, 221, 221);
+}
